# the-oracle

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_AUDIT.md  AUTH_DEBUGGING.md  PERMISSIONS_SETUP.md  QUICKSTART.md  README.md  middleware.ts  package-lock.json  package.json  pyproject.toml  run.sh  vercel.json
app/: layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/admin/: page.tsx
app/api/process/: route.ts
app/api/reports/: route.ts
app/api/share/: route.ts
app/api/test-db/: route.ts
app/dashboard/: page.tsx
app/login/: page.tsx
app/past-reports/: page.tsx
app/profile/: page.tsx
app/reports/: page.tsx
components/: CreativePerformanceReport.tsx  ExportButtons.tsx  FileUploader.tsx  FilesLibrary.tsx  FilterAndSearch.tsx  LineItemPerformanceReport.tsx  MetricsCards.tsx  Navigation.tsx  OverallSummary.tsx  ReportTable.tsx  ReportWizard.tsx  ReportsList.tsx  ShareDialog.tsx  TopLineItemsRanking.tsx  providers.tsx
lib/: auth.ts  client-file-parsers.ts  file-parsers.ts  permissions.ts  storage.ts
lib/db/: helpers.ts  index.ts  schema-updates.sql  schema.sql
lib/exporters/: csv-exporter.ts  excel-exporter.ts
lib/processors/: lineitem-extractor.ts  nxn-enrichment.ts  transaction-processor.ts
lib/supabase/: client.ts  middleware.ts  server.ts
scripts/: README.md  apply-schema-updates.sh  fix-admin-password.js  fix-admin-password.ts  init-db.sh  init-local-db.sh  seed-users-psql.sh  seed-users.js  seed-users.sql  update-admin-password.sh
src/: __init__.py  app.py  data_processor.py
types/: next-auth.d.ts
(+15 files in other folders)
